@@ -1,3 +1,12 @@
+2003-03-19  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmAuto/FvwmAuto.c (main):
+	* FvwmAuto/FvwmAuto.1:
+	A delay of 0 is no longer valid.  The new minimum is 1.
+	Send XSync after any action to force fvwm to synchronize with the X
+	server; reduces chance of race condition in case the connection to the
+	X server is slow
+
 2003-03-16  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmIconMan/xmanager.c (check_in_window):
